--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -47,19 +47,11 @@
             android:orientation="vertical"
             android:paddingBottom="@dimen/form_margin_top">
 
-            <TextView
-                android:id="@+id/textViewInstructions"
-                style="@style/AppTheme.TextViewInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/form_margin_top"
-                android:text="@string/instructions_create"/>
-
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/text_input_layout_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/form_margin_top"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
                 app:errorTextAppearance="@style/AppTheme.EditTextError">
 
                 <android.support.design.widget.TextInputEditText
